Test Org - Speridian/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIN_EIN__c</fullName>
        <label>TIN/EIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_AgencyStatus__c</fullName>
        <label>Agency Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Email_Address__c</fullName>
        <label>Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_GroupStatus__c</fullName>
        <label>Group Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Partially U/W</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Former Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_LegalEntityName__c</fullName>
        <label>Legal Entity Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RatingCity__c</fullName>
        <label>Rating City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_RatingCounty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rating County</label>
        <referenceTo>BA_Zipcode_Admin__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RatingZipcode__c</fullName>
        <label>Rating Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_RenewalMonth__c</fullName>
        <label>Renewal Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TermindationDate__c</fullName>
        <label>Termindation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Agency</fullName>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>TIN_EIN__c</columns>
        <columns>ba_TermindationDate__c</columns>
        <columns>ba_Vendor_Number__c</columns>
        <columns>ba_Email_Address__c</columns>
        <columns>ba_EffectiveDate__c</columns>
        <columns>ba_AgencyStatus__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.SIC</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>SIC_DESC</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Agency</value>
        </filters>
        <label>Agency View</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Employer_Group_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ba_LegalEntityName__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ba_GroupStatus__c</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SIC</columns>
        <columns>SIC_DESC</columns>
        <columns>TIN_EIN__c</columns>
        <columns>ba_TermindationDate__c</columns>
        <columns>ba_Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Employer_Group</value>
        </filters>
        <label>Employer Group View</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employer_Group</fullName>
        <active>true</active>
        <description>Created for Employer Group</description>
        <label>Employer Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transient</fullName>
        <active>true</active>
        <description>To store paused data</description>
        <label>Transient</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>